--- a/gridImagesLive.html
+++ b/gridImagesLive.html
@@ -109,43 +109,43 @@
 
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_8093-2.jpg">
+                    <img src="./live/IMG8093-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_2550.JPG">
+                    <img src="./live/IMG2550.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1855.JPG">
+                    <img src="./live/IMG1855.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1716.JPG">
+                    <img src="./live/IMG1716.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1701.JPG">
+                    <img src="./live/IMG1701.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1548.JPG">
+                    <img src="./live/IMG1548.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1722.JPG">
+                    <img src="./live/IMG1722.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1113-2.jpg">
+                    <img src="./live/IMG1113-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1205.JPG">
+                    <img src="./live/IMG1205.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1164.JPG">
+                    <img src="./live/IMG1164.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_0938-2.jpg">
+                    <img src="./live/IMG0938-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_0316.JPG">
+                    <img src="./live/IMG0316.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_0778.JPG">
+                    <img src="./live/IMG0778.JPG">
                 </div>
                 
 
