--- a/gridImagesLive.html
+++ b/gridImagesLive.html
@@ -155,22 +155,22 @@
 
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_2751.JPG">
+                    <img src="./live/IMG2751.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1853.JPG">
+                    <img src="./live/IMG1853.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_2483-2.jpg">
+                    <img src="./live/IMG2483-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1669.jpg">
+                    <img src="./live/IMG1669.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1706.jpg">
+                    <img src="./live/IMG1706.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1718.JPG">
+                    <img src="./live/IMG1718.JPG">
                 </div>
                
 
