--- a/gridImagesEvent.html
+++ b/gridImagesEvent.html
@@ -41,40 +41,40 @@
         <div class = 'photo-grid'>
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_1096-2.jpg">
+                    <img src="./event/IMG1096-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_1085.JPG">
+                    <img src="./event/IMG1085.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_1081-2.jpg">
+                    <img src="./event/IMG1081-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_1071-2.jpg">
+                    <img src="./event/IMG1071-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_1007%20-%20Copy.JPG">
+                    <img src="./event/IMG1007.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_2063.jpg">
+                    <img src="./event/IMG2063.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_2047.jpg">
+                    <img src="./event/IMG2047.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0940-2.jpg">
+                    <img src="./event/IMG0940-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0548.JPG">
+                    <img src="./event/IMG0548.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0482-2.jpg">
+                    <img src="/event/IMG0482-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0348%20-%20Copy.JPG">
+                    <img src="./event/IMG0348.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0250%20-%20Copy.JPG">
+                    <img src="./event/IMG0250.JPG">
                 </div>
 
               
