--- a/gridImagesEvent.html
+++ b/gridImagesEvent.html
@@ -68,7 +68,7 @@
                     <img src="./event/IMG0548.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="/event/IMG0482-2.jpg">
+                    <img src="./event/IMG0482-2.jpg">
                 </div>
                 <div class = 'photo1'>
                     <img src="./event/IMG0348.JPG">
