--- a/gridImagesEvent.html
+++ b/gridImagesEvent.html
@@ -83,37 +83,37 @@
 
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_1039%20-%20Copy.JPG">
+                    <img src="./event/IMG1039.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_1012%20-%20Copy.JPG">
+                    <img src="./event/IMG1012.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_1006-2.jpg">
+                    <img src="./event/IMG1006-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0979-2.jpg">
+                    <img src="./event/IMG0979-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_2044.jpg">
+                    <img src="./event/IMG2044.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_2039.jpg">
+                    <img src="./event/IMG2039.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0957%20-%20Copy.JPG">
+                    <img src="./event/IMG0957.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0939-2.jpg">
+                    <img src="./event/IMG0939-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0646.JPG">
+                    <img src="./event/IMG0646.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0637%20-%20Copy.JPG">
+                    <img src="./event/IMG0637.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0361%20-%20Copy.JPG">
+                    <img src="./event/IMG0361.JPG">
                 </div>
                 
 
