--- a/gridImagesEvent.html
+++ b/gridImagesEvent.html
@@ -121,31 +121,31 @@
 
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_2062.jpg">
+                    <img src="./event/IMG2062.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_2045.jpg">
+                    <img src="./event/IMG2045.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_2042.jpg">
+                    <img src="./event/IMG2042.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_2041.jpg">
+                    <img src="./event/IMG2041.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0999%20-%20Copy.JPG">
+                    <img src="./event/IMG0999.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0964%20-%20Copy.JPG">
+                    <img src="./event/IMG0964.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0882-2.jpg">
+                    <img src="./event/IMG0882-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0875-2.jpg">
+                    <img src="./event/IMG0875-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Event/IMG_0860-2.jpg">
+                    <img src="./event/IMG0860-2.jpg">
                 </div>
                 
 
