--- a/gridImagesLive.html
+++ b/gridImagesLive.html
@@ -50,7 +50,7 @@
                     <img src="./live/IMG9803-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="/live/IMG1546.JPG
+                    <img src="./live/IMG1546.JPG
                     ">
                 </div>
                 <div class = 'photo1'>
