--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                 
             <figure>     
                 <img src=
-                    "file:///C:/Users/danie/Pictures/Passport%20Photo/Screenshots/Screenshot%20(47).png"
+                    "Screenshot (47).png"
                       class = "center"
                     >
                     
