--- a/gridImagesArchitecture.html
+++ b/gridImagesArchitecture.html
@@ -90,6 +90,9 @@
                 <div class = 'photo1'>
                     <img src="./arch/IMG9938.jpg">
                 </div>
+                <div class = 'photo1'>
+                    <img src="./arch/IMG6082-2.jpg">
+                </div>
 
                 
 
@@ -179,6 +182,9 @@
                 </div>
                 <div class = 'photo1'>
                     <img src="./arch/IMG9726-2.jpg">
+                </div>
+                    <div class = 'photo1'>
+                    <img src="./arch/IMG6086-2.jpg">
                 </div>
             </div>
 
