--- a/gridImagesPortrait.html
+++ b/gridImagesPortrait.html
@@ -83,7 +83,12 @@
                 <div class = 'photo1'>
                     <img src="./port/IMG9949.JPG">
                 </div>
-                
+                <div class = 'photo1'>
+                    <img src="./port/38A6282.jpg">
+                </div>
+                <div class = 'photo1'>
+                    <img src="./port/38A6270.jpg">
+                </div>
             </div>
 
             <div class = 'column'>
